# ObrobkaZdjec

./: .gitignore  CMakeLists.txt  Main.qml  filters.frag  main.cpp
Ekrany/: CorrectionScreen.qml  DrawingScreen.qml  EditorScreen.qml  FilterScreen.qml  ManipulationScreen.qml  MetadataScreen.qml  StartScreen.qml
Kontrolki/: ConfirmDialog.qml  CornerButton.qml  CorrectionSlider.qml  CustomButton.qml  FIlterButton.qml  MetadataEditRow.qml
